--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8084
+
 #ds1
 first.datasource.url=jdbc:mysql://rm-bp14al23un6vjwse3o.mysql.rds.aliyuncs.com:3306/baletoo_finance?zeroDateTimeBehavior=round&useUnicode=true&characterEncoding=UTF-8
 first.datasource.username=duizhang
@@ -9,4 +11,24 @@ first.datasource.max-active=200
 first.datasource.test-on-borrow=true
 first.datasource.initial-size=10
 
+spring.session.store-type=none
 
+## Redis 配置
+## Redis数据库索引（默认为0）
+spring.redis.database=0
+## Redis服务器地址
+spring.redis.host=192.168.61.130
+## Redis服务器连接端口
+spring.redis.port=6379
+## Redis服务器连接密码（默认为空）
+spring.redis.password=111111
+## 连接池最大连接数（使用负值表示没有限制）
+spring.redis.pool.max-active=8
+## 连接池最大阻塞等待时间（使用负值表示没有限制）
+spring.redis.pool.max-wait=-1
+## 连接池中的最大空闲连接
+spring.redis.pool.max-idle=8
+## 连接池中的最小空闲连接
+spring.redis.pool.min-idle=0
+## 连接超时时间（毫秒）
+spring.redis.timeout=5000
