--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,12 @@ spring.redis.pool.max-idle=8
 spring.redis.pool.min-idle=0
 ## 连接超时时间（毫秒）
 spring.redis.timeout=5000
+
+
+
+#热部署生效
+spring.devtools.restart.enabled: true
+#设置重启的目录
+#spring.devtools.restart.additional-paths: src/main/java
+#classpath目录下的WEB-INF文件夹内容修改不重启
+spring.devtools.restart.exclude: WEB-INF/**
